--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
         <h1>Tasnim's Portfolio</h1>
         <h2>I'm a Web Developer</h2>
         <hr/>
-        <h3><a href="../4.3 HTM Porfolio Project/public/birthday-invite.html" >Birthday Invite Project</a></h3>
+        <h3><a href="../4.3 htm Porfolio Project/public/birthday-invite.html" >Birthday Invite Project</a></h3>
         <img src="./assets/images/birthday-invite.png" alt="Birthday invite Project photo"  height="200"/>
-        <h3><a href="../4.3 HTM Porfolio Project/public/movie-ranking.html">Movie-ranking</a></h3>
+        <h3><a href="../4.3 htm Porfolio Project/public/movie-ranking.html">Movie-ranking</a></h3>
         <img src="./assets/images/movie ranking.png" alt="Movie ranking web project photo" height="200">
-        <a href="../4.3 HTM Porfolio Project/public/contact.html">Contact Me</a>
-        <a href="../4.3 HTM Porfolio Project/public/about.html">About me</a>
+        <a href="../4.3 htm Porfolio Project/public/contact.html">Contact Me</a>
+        <a href="../4.3 htm Porfolio Project/public/about.html">About me</a>
     </body>
 </html>
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
